# state-bird

./: README.md  pyproject.toml
state_bird/: cli.py  config.json
state_bird/app/: app.py
state_bird/codegen/: ccw_variable_template.csv  commands.py  faults.py  gen.py  io.py  ladder.py  state_ladder.py  state_variables.py  variables.py
state_bird/commands/: commands.py  controller_commands.py  state_commands.py
state_bird/data/: commands.py  config.json  create.py  database.db  initdb.py  read.py  update.py  write.py
state_bird/state/: create.py  graph.py
state_bird/util/: file_util.py
